[package]
name = "stylus-token-sale"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/anistark/stylus-token-sale"
repository = "https://github.com/anistark/stylus-token-sale"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus Token Sale"

[dependencies]
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"
mini-alloc = "0.4.2"
stylus-sdk = "0.6.0"
hex = "0.4.3"
dotenvy = "0.15.7"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "tokensale"
path = "src/main.rs"

[lib]
name = "libtokensale"
edition = "2021"
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
